# magin

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json
.claude/: settings.local.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  api.py  docker-compose.yml  main.py  pipeline.py  prompts.py  pyproject.toml
backend/dummy/: codegen.txt  storyboard.txt
backend/media/videos/1080p60/partial_movie_files/CheckHealthDemo/: partial_movie_file_list.txt
demos/: DEMOS.md
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  README.md  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/(pages)/health/: page.tsx
frontend/components/: output-panel.tsx  query-panel.tsx  source-panel.tsx  status-list.tsx  studio.tsx  video-panel.tsx
frontend/components/ui/: tabs.tsx  textarea.tsx
frontend/lib/: store.ts
frontend/styles/: fonts.ts  globals.css
